<resources>
    <string name="app_name">My advertising</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_my">МОЯ</string>
    <string name="title_add">реклама</string>
    <string name="title_hint_phone_number">Номер телефона</string>
    <string name="title_hint_password">Пароль</string>
    <string name="title_forget_password">Забыли пароль ?</string>
    <string name="title_enter">Вход</string>
    <string name="title_not_account">Нет учетной записи? Регистрация</string>
    <string name="styled_welcome_message">Нет учетной записи? <b>Регистрация</b></string>
    <string name="title_welcome"><b>Добро пожаловать!</b>\nСервис созданный для комфорта и Вашего удобство в рекламе.</string>
    <string name="title_registration">Регистрация</string>
    <string name="title_confirm">Подтвердить</string>
    <string name="title_confirm_top">Подтверждение</string>
    <string name="title_phone_phone">по номеру телефона</string>
    <string name="title_hint_name">Имя</string>
    <string name="title_condition">Я согласен с <u>условиями</u> и <u>политикой конфиденциальности.</u></string>
    <string name="title_exist_account">Есть учетная запись ? <b>Вход</b></string>
    <string name="text_confirm">Пожалуйста укажите 4 значный код который был отправлен в sms сообщение на ваш номер телефона</string>
    <string name="title_back">Назад</string>
    <string name="title_restore_password">Восстановление пароля</string>
    <string name="text_restore_password">Мы вышлем вам смс с паролем восстановления на ваш номер</string>
    <string name="title_send">Отправить</string>
    <string name="title_geolocation">Геолокация</string>
    <string name="text_geolocation">Автоматическое определение вашего местоположения при поиске рекламы</string>
    <string name="title_turn_on">Включить</string>
    <string name="text_location_explanation">Данная функция будет работать только тогда, когда программа Моя Реклама запущена и вам не придется указывать вручную ваше местоположение.</string>
    <string name="title_remind_later">Напомнить позже</string>
    <string name="title_location_not_found">Местоположение не определено</string>
    <string name="title_turn_on_location">Включить геолокацию</string>
    <string name="title_specify_manually">Указать вручную</string>
    <string name="title_show_all">Показать всё</string>
    <string name="map">Карта</string>
    <string name="example_title">Билборд 3 х 6</string>
    <string name="example_adress">ш. Южное, ул. Ленина, д. 35а</string>
    <string name="price_for_month">Цена за месяц</string>
    <string name="price_for_year">Цена за год</string>
    <string name="title_busy_for">Занят до</string>
    <string name="write_date_you_want">Указать даты желаемого бронирования</string>
    <string name="date_from">Дата от</string>
    <string name="date_to">Дата до</string>
    <string name="is_adv_material">Есть рекламный материал</string>
    <string name="order">ЗАКАЗАТЬ</string>
    <string name="error_pick_image">Необходимо выбрать фото</string>
    <string name="photo_object_title">Фото билборда</string>
    <string name="error_choose_date">Необходимо выбрать даты</string>
    <string name="error_date">Текущая дата должна предшествовать установленной \"с\"</string>
    <string name="error_date_2">Дата \"до\" должна предшествовать дате \"с\"</string>
    <string name="cancel">Отмена</string>
    <string name="placement_period">Срок размещения:</string>
    <string name="value_for_pay">Стоимость к оплате:</string>
    <string name="pay">ОПЛАТИТЬ</string>
    <string name="save_data_card">Сохранить данные карты</string>
    <string name="pay_order_title">ОПЛАТА ЗАКАЗА</string>
    <string name="card_number">Card Number</string>
    <string name="name_card">Name card</string>
    <string name="date_card">Date card</string>
    <string name="cvv_card">CVV</string>
    <string name="history">История</string>
    <string name="cost_adv">%1$s \u20bd</string>
    <string name="error_validate_et">Заполните поле \"%1$s\"</string>
    <string name="error_password_length">Пароль должен содержать более 8 символов</string>
    <string name="error_validate_code">Введите код из смс</string>
    <string name="error_validate_switch">Согласитесь с условиями и политикой конфиденциальности.</string>
    <string name="cancel_order">Отмена заказа</string>
    <string name="text_cancel_order">Пожалуйста внимательно ознакомьте с условиями отмены заказа</string>
    <string name="confirm">Подтвердить</string>
    <string name="settings">Настройки</string>
    <string name="edit">Изменить</string>
    <string name="privacy_policy"><u>Политика конфиденциальности</u></string>
    <string name="condition"><u>Условия использования</u></string>
    <string name="exit">Выйти</string>
    <string name="add_card">Добавить карту</string>
    <string name="profile">profile</string>
    <string name="messages">messages</string>
    <string name="error_phone_registration">Такое значение поля Телефон уже существует.</string>
    <string name="error_confirm_code">введен неправильный код из смс</string>
    <string name="close_title">Закрыть</string>
    <string name="error_receive_permission">"Необходимо предоставить разрешение, либо нажмите \"напомнить позже\""</string>
    <string name="title_name_app_in_profile">Моя Реклама v 1.0</string>
    <string name="title_info_app">Мы предоставляем сервис аренды рекламных площадей. Постоянно расширяющийся список рекламных возможностей с быстрым доступом к ним и онлайн оплатой.</string>
    <string name="change_info_title">Введите данные для изменения</string>
    <string name="confirm_change">Подтвердить изменения</string>
    <string name="free">Бесплатно</string>
</resources>
