<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="600dp"
    android:layout_marginTop="8dp"
    android:layout_marginStart="28dp"
    android:layout_marginEnd="28dp"
    android:background="@drawable/background_dialog_not_location"
    app:layout_constraintBottom_toTopOf="@+id/layout_show_all"
    app:layout_constraintTop_toTopOf="@+id/mapView"
    tools:layout_editor_absoluteX="20dp"
    tools:showIn="@layout/fragment_map"
    android:id="@+id/dialog_pay_order"
    android:visibility="visible">

    <TextView
        android:id="@+id/cancel_pay_order_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/avenirnext_regular_08"
        android:padding="4dp"
        android:text="@string/cancel"
        android:textColor="@color/shadow_white"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenirnext_medium_06"
        android:text="@string/pay_order_title"
        android:textColor="@color/text_color_white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cancel_pay_order_tv" />

    <View
        android:id="@+id/info_order"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_1" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_copy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/info_order"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/title_adv_tv_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/avenirnext_demibold_03"
        android:text="@string/example_title"
        android:textColor="@color/text_color_white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/info_order"
        app:layout_constraintTop_toTopOf="@+id/info_order" />

    <TextView
        android:id="@+id/title_adv_address_tv_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/avenirnext_regular_08"
        android:text="@string/example_adress"
        android:textColor="@color/shadow_white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/info_order"
        app:layout_constraintTop_toBottomOf="@+id/title_adv_tv" />

    <TextView
        android:id="@+id/title_placement_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/avenirnext_regular_08"
        android:text="@string/placement_period"
        android:textColor="@color/text_color_white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/info_order"
        app:layout_constraintTop_toBottomOf="@+id/title_adv_address_tv" />

    <TextView
        android:id="@+id/period_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/avenirnext_demibold_03"
        android:text="31.12.2019"
        android:textColor="@color/text_color_white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/info_order"
        app:layout_constraintTop_toTopOf="@+id/title_placement_period" />

    <TextView
        android:id="@+id/title_price_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/avenirnext_regular_08"
        android:text="@string/value_for_pay"
        android:textColor="@color/text_color_white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/info_order"
        app:layout_constraintTop_toBottomOf="@+id/title_placement_period" />

    <TextView
        android:id="@+id/price_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/avenirnext_demibold_03"
        android:text="127000 \u20bd"
        android:textColor="@color/text_color_white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/info_order"
        app:layout_constraintTop_toBottomOf="@+id/period_tv" />

    <EditText
        android:id="@+id/number_card_et"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:background="@drawable/background_card_et"
        android:fontFamily="@font/avenirnext_medium_06"
        android:gravity="center"
        android:hint="@string/card_number"
        android:textColorHint="@color/shadow_white"
        app:layout_constraintBottom_toTopOf="@+id/title_is_adv_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_order"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/name_card_et"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:background="@drawable/background_card_et"
        android:fontFamily="@font/avenirnext_medium_06"
        android:gravity="center"
        android:hint="@string/name_card"
        android:textColorHint="@color/shadow_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_card_et"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/date_card_et"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_card_et"
        android:fontFamily="@font/avenirnext_medium_06"
        android:gravity="center"
        android:hint="@string/date_card"
        android:textColorHint="@color/shadow_white"
        app:layout_constraintStart_toStartOf="@+id/name_card_et"
        app:layout_constraintTop_toBottomOf="@+id/name_card_et" />

    <EditText
        android:id="@+id/cvv_card_et"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_card_et"
        android:fontFamily="@font/avenirnext_medium_06"
        android:gravity="center"
        android:hint="@string/cvv_card"
        android:textColorHint="@color/shadow_white"
        app:layout_constraintEnd_toEndOf="@+id/name_card_et"
        app:layout_constraintTop_toBottomOf="@+id/name_card_et" />
    <TextView
        android:id="@+id/title_is_adv_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:drawableLeft="@drawable/ic_check"
        android:drawablePadding="8dp"
        android:fontFamily="@font/avenirnext_regular_08"
        android:text="@string/save_data_card"
        android:textColor="@color/shadow_white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/order_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_to_button" />

    <TextView
        android:id="@+id/order_tv"
        android:layout_width="140dp"
        android:layout_height="35dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/avenirnext_demibold_03"
        android:gravity="center"
        android:text="@string/pay"
        android:textColor="@color/color_blue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>