<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_button_enter"
    android:minWidth="350dp"
    android:padding="12dp"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_info_title"
        android:layout_margin="8dp"
        android:textColor="#014e6c"
        android:textStyle="bold"
        android:textSize="16sp"
        android:drawablePadding="8dp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/name_change_et"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/background_drawable_dark_blue"
        android:gravity="center"
        android:hint="@string/title_hint_name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textColor="@color/text_color_white"
        android:textColorHint="@color/text_color_white"
        android:fontFamily="@font/avenirnext_regular_08"/>

    <EditText
        android:id="@+id/password_change_et"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/background_drawable_dark_blue"
        android:gravity="center"
        android:hint="@string/title_hint_password"
        android:imeOptions="actionDone"
        android:textColor="@color/text_color_white"
        android:textColorHint="@color/text_color_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_view"
        android:fontFamily="@font/avenirnext_regular_08"/>


    <Button
        android:id="@+id/confirm_change_button"
        android:layout_width="256dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_button_enter"
        android:text="@string/confirm_change"
        android:textColor="@color/text_color_blue"
        android:textSize="16sp"
        android:fontFamily="@font/avenirnext_demibold_03"/>

</LinearLayout>