<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".ui.fragment.login.EnterFragment">

    <TextView
        android:id="@+id/text_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/title_geolocation"
        android:textColor="@color/text_color_white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/avenirnext_demibold_03"/>

    <TextView
        android:id="@+id/text_two"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_geolocation"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/text_color_white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_one"
        android:fontFamily="@font/avenirnext_regular_08"/>

    <ImageView
        android:id="@+id/layout_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:src="@drawable/ic_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_two" />

    <TextView
        android:id="@+id/text_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:fontFamily="@font/avenirnext_regular_08"
        android:gravity="center"
        android:text="@string/text_location_explanation"
        android:textColor="@color/text_color_white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/confirm_location_button"
        app:layout_constraintTop_toBottomOf="@+id/layout_view"
        tools:layout_editor_absoluteX="32dp" />

    <Button
        android:id="@+id/confirm_location_button"
        android:layout_width="256dp"
        android:layout_height="56dp"
        android:layout_marginBottom="85dp"
        android:background="@drawable/background_button_enter"
        android:fontFamily="@font/avenirnext_demibold_03"
        android:text="@string/title_turn_on"
        android:textColor="@color/text_color_blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/remind_later_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenirnext_regular_08"
        android:gravity="center"
        android:text="@string/title_remind_later"
        android:textColor="@color/text_color_white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/confirm_location_button" />


    <View
        android:id="@+id/view"
        android:layout_width="100dp"
        android:layout_height="3dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background_button_enter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_location_button"
        app:layout_constraintVertical_bias="0.891" />

</androidx.constraintlayout.widget.ConstraintLayout>